--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,9 @@ html {
   background-color: #EFEFEF;
   width: 100%;
 }
+.fixed{
+  position: fixed;
+}
 
 .footer-custom {
   color: #888;
@@ -437,7 +440,10 @@ html {
   margin-top: 50px;
 }
 .pageMargin{
-  margin: 50px;
+  margin: 200px;
+}
+.centered{
+  position: center;
 }
 .image2{
   float: left;
